Refactor saveToFile and loadFromFile to use Files.write and throws IOException